--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+.loader{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30vh;
+}
